--- a/src/content/posts/core-d20/design-diary-equipment-armor-2.mdx
+++ b/src/content/posts/core-d20/design-diary-equipment-armor-2.mdx
@@ -18,24 +18,24 @@ tags:
 
 Для увеличения вариативности и создания мотивации для использования легких доспехов были добавлены сразу несколько новых вариантов:
 
-- легкая бригандина, которая позволяет реализовать КЗ 18 с +5 Ловкостью, хотя и дает помехи на скрытность;
+- легкая бригантина, которая позволяет реализовать КЗ 18 с +5 Ловкостью, хотя и дает помехи на скрытность;
 - бронированный плащ, который совмещается с другими видами легких доспехов и щитами также;
-- и для проклепаной кожи появился аналог - клепаный чешуйчатый доспез (12 КЗ, и помеха на Скрытность).
+- и для проклёпаной кожи появился аналог - клепаный чешуйчатый доспех (12 КЗ, и помеха на Скрытность).
 
 ## Средние доспехи
 
-Что касается средних доспехов, то в их случаетакже было очевидно, что с КЗ что-то надо менять.
+Что касается средних доспехов, то в их случае также было очевидно, что с КЗ что-то надо менять.
 
 Диапазон КЗ средних доспехов изменяется от 13 до 15 КЗ, при этом некоторые доспехи дают помеху на проверку скрытности.
 
 Были добавлены следующие доспехи:
 
 - слоеные шкуры;
-- бригандина;
+- бригантина;
 - ламеллярный доспех;
 - лорика сегментата.
 
-За счет варьирования свойств мы добавили еще один доспех для персонажей из диких сообществ, дешевый аналог доспеха для городских стражников, доспех для более ловких персонажей (ламеллярный, с максимальным бонусом Ловкости +3) и максимально защищещенный средний доспех, тем не менее позволяющий скрытно передвигаться - лорика сегментата.
+За счет варьирования свойств мы добавили еще один доспех для персонажей из диких сообществ, дешевый аналог доспеха для городских стражников, доспех для более ловких персонажей (ламеллярный, с максимальным бонусом Ловкости +3) и максимально защищенный средний доспех, тем не менее позволяющий скрытно передвигаться - лорика сегментата.
 
 Обратите внимание, что в предлагаемых нами изменениях средних и легких доспехов - средние все еще не смогут реализовать 18 КЗ - только 17 КЗ.
 
@@ -45,16 +45,16 @@ tags:
 
 - слоеные меха;
 - banded mail, как альтернатива пластинчатому доспеху;
-- хауберк, который закрвает нишу 15 КЗ;
+- хауберк, который закрывает нишу 15 КЗ;
 - полный латный доспех, который является ультимативным доспехом с 19 КЗ и весом в 90 фунтов.
 
 Описанные свойства доспехов были успешно апробированы, равно как доспехи из необычных материалов и слоеные доспехи.
 
-Дополнительные доспехи и щиты были перенесеы для реализации в дополнении, а по доспехам сейчас мы добавим еще вариаций.
+Дополнительные доспехи и щиты были перенесены для реализации в дополнении, а по доспехам сейчас мы добавим еще вариаций.
 
 ## Дополнительные вариативные правила по доспехам
 
-Во первых, добавится показатель **Armor Value** - который показывает сколько доспех может поглотить урона при пряямом попадании (весь поглощенный урон вычитается из хитов самого доспеха, которые в идеальном случае определяются ккак произведение дополнительного Класса Защиты и 30).
+Во первых, добавится показатель **Armor Value** - который показывает сколько доспех может поглотить урона при прямом попадании (весь поглощенный урон вычитается из хитов самого доспеха, которые в идеальном случае определяются как произведение дополнительного Класса Защиты и 30).
 
 Также на основании других источников была произведена оценка сеттинга и наличия доспехов и стало понятно что сеттинг относится скорее к Т3, тогда как уже Голарион стоит на пороге Т4.
 
@@ -68,14 +68,14 @@ tags:
 
 Описание доспехов, часто указывает на недостатки в виде необходимости значительного ухаживания за этими доспехами. Пока еще не понятно как это реализовывать, оо будущее покажет.
 
-Ну и стало понятно, что без таблиц эквивалентов доспехов двигаться дальше не получится, поэтому я ее сделал и даже провел некоторые сопоставления (в основнм с римскими доспехами).
+Ну и стало понятно, что без таблиц эквивалентов доспехов двигаться дальше не получится, поэтому я ее сделал и даже провел некоторые сопоставления (в основном с римскими доспехами).
 
-и также становится понятно что необходимо все таки помнить о техологических уровнях развития общества, поэтому в предшествующий доспехам общий раздел главы саряжения добавлена информация про семь технологических уровней развития вместе с описаием редкости не волшебных предметов.
+и также становится понятно что необходимо все таки помнить о технологических уровнях развития общества, поэтому в предшествующий доспехам общий раздел главы снаряжения добавлена информация про семь технологических уровней развития вместе с описанием редкости не волшебных предметов.
 
 И при полировке правил доспехов и самих доспехов вполне еще могут произойти изменения - так, мне не нравится использование плейсхолдера "тяжелый пехотный доспех" и лорика сегментата в средних доспехах.
 
 Что касается щитов, то правила описанные в [заметке](/posts/core-d20/enhanced-shields), были имплементированы полностью.
 
-В следующей части я скорее всего буду говорить о оружии и аммуниции уже, поэтому продолжение следует.
+В следующей части я скорее всего буду говорить о оружии и амуниции уже, поэтому продолжение следует.
 
 Продолжение следует …
