--- a/src/content/posts/core-d20/eldritch-archer-fighter-archetype.mdx
+++ b/src/content/posts/core-d20/eldritch-archer-fighter-archetype.mdx
@@ -5,20 +5,20 @@ date: "2021-05-29"
 tags:
   - Боец
   - Архетип
-  - Дучник заклинатель
+  - Лучник заклинатель
   - Core d20 RPG
 ---
 
 ## ЛУЧНИК ЗАКЛИНАТЕЛЬ
 
-Особенности Лучника Заклинателя
-
-Уровень Особенности Архетипа
-3 Сотворение Заклинаний, Связь с оружием
-7 Военное волшебство, Волшебная связь
-10 Заклинающий Удар
-15 Волшебный Снайпер
-18 Улучшенное Военное Волшебство
+|Особенности Лучника Заклинателя                    |
+|-----------|---------------------------------------|
+|**Уровень**| **Особенности Архетипа**              |
+|3          | Сотворение Заклинаний, Связь с оружием|
+|7          | Военное волшебство, Волшебная связь   |
+|10         | Заклинающий Удар                      |
+|15         | Волшебный Снайпер                     |
+|18         | Улучшенное Военное Волшебство         |
 
 ## Сотворение Заклинаний
 
@@ -36,13 +36,13 @@ tags:
 Заклинания, которые вы выучите на 8, 14 и 20 уровнях могут принадлежать к любой школе магии.
 Каждый раз, получая уровень в этом классе, вы можете заменить одно из заклинаний волшебника, известное вам, другим, на ваш выбор. Новое заклинание должно быть из списка доступных волшебнику, у вас должны быть ячейки соответствующего уровня, и заклинание должно принадлежать школам Воплощения или Ограждения, кроме случаев, когда вы заменяете заклинания, полученные на 8, 14 или 20 уровнях.
 
-Дополнительные заклинания Лучника Заклинателя
-
-Круг Заклинания
-3rd hail of thorns, hunter's mark
-7th cordon of arrows, pass without trace
-13th conjure barrage, lightning arrow
-19th conjure volley, swift quiver
+|Дополнительные заклинания Лучника Заклинателя                                          |
+|--------|------------------------------------------------------------------------------|
+|**Круг**|**Заклинания**                                                                |
+|3-й     | Град шипов [hail of thorns], Метка охотника [hunter's mark]                  |
+|7-й     | Завеса стрел [cordon of arrows], Бесследное передвижение [pass without trace]|
+|13-й    | Призыв заграждения [conjure barrage], Молниевая стрела [lightning arrow]     |
+|19-й    | Призыв залпа [conjure volley], Быстрый колчан [swift quiver]                 |
 
 **Заклинательная характеристика.**
 Интеллект является базовой характеристикой для ваших заклинаний, поскольку вы узнаёте заклинания посредством изучения и запоминания. Когда заклинание требует использовать базовую характеристику, вы используете Интеллект. Кроме того, вы используете модификатор Интеллекта при определении КС спасбросков от ваших заклинаний волшебника, и при броске атаки заклинаниями.
