--- a/src/content/posts/core-d20/eldritch-knight-fighter-archetype.mdx
+++ b/src/content/posts/core-d20/eldritch-knight-fighter-archetype.mdx
@@ -46,12 +46,12 @@ tags:
 
 Модификатор броска атаки = бонус владения + модификатор Интеллекта
 
-| Уровень | Заклинания       |
-| ------- | ---------------- |
-| 3       | arcane strike    |
-| 7       | Branding smite,  |
-| 13      | Elemental Weapon |
-| 19      | Fire Shield      |
+| Уровень | Заклинания                         |
+| ------- | ---------------------------------- |
+| 3       | *Мистический удар [Arcane strike]* |
+| 7       | Клеймящая кара [Branding smite]    |
+| 13      | Стихийное оружие [Elemental Weapon]|
+| 19      | Огненный щит [Fire Shield]         |
 
 **Заклинательная характеристика.**
 Интеллект является базовой характеристикой для ваших заклинаний, поскольку вы узнаёте заклинания посредством изучения и запоминания. Когда заклинание требует использовать базовую характеристику, вы используете Интеллект. Кроме того, вы используете модификатор Интеллекта при определении КС спасбросков от ваших заклинаний волшебника, и при броске атаки заклинаниями.
@@ -86,7 +86,7 @@ tags:
 
 ## Улучшенное военное волшебство
 
-На 18ом уровне ваше знанение волшебства позволяет вам эффективно от него защищаться - - вы получаете Устойчивость к Магии и совершаете с преимуществом спасброски против заклинаний (но не волшебных эффектов).
+На 18ом уровне ваше знание волшебства позволяет вам эффективно от него защищаться - - вы получаете Устойчивость к Магии и совершаете с преимуществом спасброски против заклинаний (но не волшебных эффектов).
 
 | Уровень бойца | Известные заговоры | Известные заклинания | Ячейки заклинаний на круг заклинаний |     |     |     |
 | ------------- | ------------------ | -------------------- | ------------------------------------ | --- | --- | --- |
@@ -111,6 +111,21 @@ tags:
 | 20            | 3                  | 13                   | 4                                    | 3   | 3   | 1   |
 
 ## ЗАКЛИНАНИЯ
+
+### Мистический удар [Arcane strike]
+Заговор, воплощение
+
+Время сотворения: 1 действие
+
+Дистанция: На себя (5-футовый радиус)
+
+Компоненты: С, М (любое оружие)
+
+Длительность: Мгновенная
+
+Как часть действия, используемого для накладывания этого заклинания, вы должны совершить рукопашную атаку оружием по одному из существ в радиусе действия заклинания или заклинание провалится. При попадании цель подвергается обычному эффекту от атаки этим оружием и получает дополнительный 1к10 урона силовым полем.
+
+Урон этого заклинания увеличивается на 1к10, когда вы достигаете 5-го уровня (2к10), 11-го уровня (3к10) и 17-го уровня (4к10).
 
 ### Молниевый клинок
 
@@ -140,6 +155,6 @@ tags:
 
 Длительность: 1 минута, Концентрация
 
-Персонаж жертвует собственной жизненной силой, чтобы усилить свою следующую атаку. При сотворении этого заклинания персонаж тратит 1 кость хитов, чтобы зарядить клинок силой своей крови. Следующее попадание совершенное во время действия заклинания наносит цели дополнительно 2к8 урона без определенного типа (таким образом,, игнорируя любые устойчивости и иммунитеты), персонаж при этом также получает 1к4 урона и при этом его максимум хитов также уменьшается на эначение полученного урона. Эти хиты восстанавливаются после завершения длительного отдыха.
+Персонаж жертвует собственной жизненной силой, чтобы усилить свою следующую атаку. При сотворении этого заклинания персонаж тратит 1 кость хитов, чтобы зарядить клинок силой своей крови. Следующее попадание совершенное во время действия заклинания наносит цели дополнительно 2к8 урона без определенного типа (таким образом,, игнорируя любые устойчивости и иммунитеты), персонаж при этом также получает 1к4 урона и при этом его максимум хитов также уменьшается на значение полученного урона. Эти хиты восстанавливаются после завершения длительного отдыха.
 
 **На более высоких кругах:** при использовании для сотворения этого заклинания ячеек выше первого круга, урон, наносимый заклинанием, увеличивается на 1к8 и 1к4 за каждый круг ячейки выше 1.
