--- a/src/content/posts/core-d20/morale-c20.mdx
+++ b/src/content/posts/core-d20/morale-c20.mdx
@@ -10,18 +10,18 @@ tags:
 ---
 
 Показатели боевого духа соответствуют следующим значениям боевого духа:
-| Показатель | Значение | Модификатор |
+| Показатель    | Значение      | Модификатор |
 |---------------|---------------|-------------|
-| Колеблющийся | 3 | -4 |
-| Колеблющийся | 04.май | -3 |
-| Ненадежный | 06.июль | -2 |
-| Неустойчивый | 08.сент | -1 |
-| Средний | 10.нояб | ±0 |
-| Устойчивый | 1 2-13 | 1 |
-| Элита | 14-15 | 2 |
-| Чемпион | 16-17 | 3 |
-| Фанатик | 18-19 | 4 |
-| Непоколебимый | 20 или больше | 5 |
+| Колеблющийся  | 3 или меньше  | -4          |
+| Колеблющийся  | 4-5           | -3          |
+| Ненадежный    | 6-7           | -2          |
+| Неустойчивый  | 8-9           | -1          |
+| Средний       | 10-11         | ±0          |
+| Устойчивый    | 12-13         | 1           |
+| Элита         | 14-15         | 2           |
+| Чемпион       | 16-17         | 3           |
+| Фанатик       | 18-19         | 4           |
+| Непоколебимый | 20 или больше | 5           |
 
 ## ПРИМЕРЫ БОЕВОГО ДУХА
 
@@ -64,24 +64,24 @@ tags:
 
 | Боевой дух (значение) | Модификатор мировоззрения НИП |
 | --------------------- | ----------------------------- |
-| Законный              | 1                             |
+| Законный              |  1                            |
 | Хаотический           | -1                            |
 | Злой                  | -1                            |
-| Добрый                | 1                             |
+| Добрый                |  1                            |
 
 Кроме того, НИП, как правило, более лояльны к тем, кто разделяет их убеждения и ценности, как показано в следующей таблице:
-| Разница в мировоззрении между НИП и мастером | Модификатор |
+| Разница в мировоззрении между НИП и мастером  | Модификатор |
 |-----------------------------------------------|-------------|
-| Такой же | 2 |
-| Отличается на 1 шаг по любой из осей | ± 0 |
-| Отличается на 2 или более шагов по обеим осям | -2 |
+| Такой же                                      |   2         |
+| Отличается на 1 шаг по любой из осей          | ± 0         |
+| Отличается на 2 или более шагов по обеим осям | -2          |
 
 Отношение: Отношение существа или НИП к своему наставнику или лидеру может меняться со временем, в зависимости от того, как относятся к этому существу или НИП. Существа и НИП, с которыми обращаются жестоко или капризно со временем они перестанут любить или ненавидеть своих хозяев, в то время как те, с кем обращаются доброжелательно и/или справедливо, будут становиться все более лояльными.
 
 | Отношение НИП к своему хозяину | Модификатор |
 | ------------------------------ | ----------- |
-| Предпочтительный               | 3           |
-| Доброжелательность             | 1           |
+| Предпочтительный               |  3          |
+| Доброжелательность             |  1          |
 | Нейтральный                    | ±0          |
 | Антипатия                      | -3          |
 | Ненависть                      | -5          |
@@ -115,15 +115,15 @@ tags:
 
 | Обстоятельства                                         | Модификатор КС |
 | ------------------------------------------------------ | -------------- |
-| 25% союзных войск (или хитов) потеряно                 | 1              |
-| 50% союзных войск (или хитов) теряются                 | 3              |
-| Брошен союзниками                                      | 5              |
+| 25% союзных войск (или хитов) потеряно                 |  1             |
+| 50% союзных войск (или хитов) теряются                 |  3             |
+| Брошен союзниками                                      |  5             |
 | Защита дома или нет никаких средств отступления        | -2             |
 | Встреча с ненавистным врагом                           | -4             |
 | Столкновение с слабым врагом                           | -2             |
-| Встреча с превосходящим врагом                         | 2              |
-| Вынуждены идти на неоправданный риск                   | 5              |
-| Лидер убит или иным образом потерян                    | 5              |
+| Встреча с превосходящим врагом                         |  2             |
+| Вынуждены идти на неоправданный риск                   |  5             |
+| Лидер убит или иным образом потерян                    |  5             |
 | Численность противников 3 или более к 1                | -5             |
-| Превосходят противников в чисденности 3 или более до 1 | 5              |
+| Превосходят противников в чисденности 3 или более до 1 |  5             |
 | Невозможно воздействовать на противников\*             | 10             |
