--- a/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotchika-kak-daleko-ty-vidish.mdx
+++ b/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotchika-kak-daleko-ty-vidish.mdx
@@ -16,7 +16,7 @@ tags:
 
 Обычно ограничением того, насколько далеко могут видеть персонажи, является какое-либо препятствие, такое как здание, лес или несколько холмов. Туман и темнота также ограничивают обзор. Однако иногда персонажи будут находиться на плоских равнинах в ясный день, и единственным ограничением их зрения будет их восприятие и горизонт. Как только что-то уходит за горизонт, его нельзя увидеть. Но где горизонт?
 
-| Высота, футы | Растояние, мили |
+| Высота, футы | Расстояние, мили |
 | ------------ | --------------- |
 | 3            | 2               |
 | 6            | 3               |
