--- a/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotchika-srazhenie-2.mdx
+++ b/src/content/posts/core-d20/mysli-vsluh-dnevnik-razrabotchika-srazhenie-2.mdx
@@ -10,7 +10,7 @@ tags:
 
 ### Действия
 
-чего я в 5 редакции не хватало? Очень дико не хватало натиска - Charge. Соответственно, мы добавляем это действие, которое позволяет совместить увеличенное передвижение (хоть и с ограничением что по прямой) с совершением атаки. Добавляем правила по Coup-de-Grace добиванию которой является полной раундовый действием. Это тоже то, что считаем необходимым для правил действия, которые занимают весь ход и действия, и действия движения, и бонусные действия. Потратив полностью все действие за ход – персонаж добивает беспомощную цель в не зависимости от её хитов.Также важно действие для более красивой нарративной передачи оглушения цели. Из за угла вышел кистенём по голове, дал и существо упала без сознания опять таки.
+Чего я в 5 редакции не хватало? Очень дико не хватало натиска - Charge. Соответственно, мы добавляем это действие, которое позволяет совместить увеличенное передвижение (хоть и с ограничением что по прямой) с совершением атаки. Добавляем правила по Coup-de-Grace добиванию которой является полной раундовый действием. Это тоже то, что считаем необходимым для правил действия, которые занимают весь ход и действия, и действия движения, и бонусные действия. Потратив полностью все действие за ход – персонаж добивает беспомощную цель в не зависимости от её хитов.Также важно действие для более красивой нарративной передачи оглушения цели. Из за угла вышел кистенём по голове, дал и существо упала без сознания опять таки.
 
 ### Опять про атаки ближнего и дальнего боя
 
@@ -38,7 +38,7 @@ tags:
 
 ### Состояния
 
-Стоит добавить дополнительные. Состояние, которые будут более легкими формами уже существующих, например, потрясён более лёгкая форма оглушённого, да? Cовсем забыл надо еще добавить то же самое к урону добавить. Длительный урон, которую. На английском называется ongoing damage / persistent damage.
+Стоит добавить дополнительные. Состояние, которые будут более легкими формами уже существующих, например, потрясён более лёгкая форма оглушённого, да? Совсем забыл надо еще добавить то же самое к урону добавить. Длительный урон, который на английском называется ongoing damage / persistent damage.
 
 ### Скрытность и состояния
 
@@ -64,7 +64,7 @@ tags:
 
 ### Иммунитеты к урону
 
-Кстати, возвращаясь к урону, правила по. Иммунитетом сопротивлением и уменьшение урона то также изменяются в сторону третьей редакции. Чем круче существо, тем круче нужным необходимо оружие, чтобы носить ему эффективный урон. То бишь тот же самый длинный меч +1 поможет паладину наносить урон по шпанскому дьяволу, но против марилит генерала армии демонов ему понадобится оружие хотя бы уже +3 для Того, чтобы это атаки были эффективными. Также немногое изменение механики существ, связанных с этими иммунитетами. Возьмем, например, вервольфа, который в данный момент не получает урон от несеребрянных атак, кроме как совершенными магическим или серебряным оружием. Во первых, требования серебряного оружия являются определяющим. То есть даже волшебный меч не поможет против вервульфа, которого надо бить именно серебряным оружием. Мелочь, но это сделает эти сопротивление иммунитета вервольфа гораздо более значимыми, чем те, которые они являются сейчас, и, соответственно, точно так же атаки кантрипами не будут наносить ему полноценного урона, при этом. Вместо полного иммунитета мы будем использовать уменьшение урона, уменьшение порог урона этого будет достаточно большой, допустим 10. Но Добавим, к вервольфу просто быстрое лечение, которое работает до тех пор, пока по нему не попадут серебрянным оружием. Что это нам даст? Во-первых замена иммунитета на уменьшение урона позволят всё таки пробивать вервольфа даже в, скажем так не серебряным оружием. С другой стороны, это будет просто меньше урона. С другой стороны, наличие лечения будет как раз хорошо связано с нарративов, когда ты его бьёшь, а на нём эти раны быстро зарастают. Мне это нравится гораздо больше, чем текущий иммунитет, который непонятно, как проявляется.
+Кстати, возвращаясь к урону, правила по. Иммунитетом сопротивлением и уменьшение урона то также изменяются в сторону третьей редакции. Чем круче существо, тем круче нужным необходимо оружие, чтобы носить ему эффективный урон. То бишь тот же самый длинный меч +1 поможет паладину наносить урон по шпанскому дьяволу, но против марилит генерала армии демонов ему понадобится оружие хотя бы уже +3 для Того, чтобы это атаки были эффективными. Также немногое изменение механики существ, связанных с этими иммунитетами. Возьмем, например, вервольфа, который в данный момент не получает урон от несеребрянных атак, кроме как совершенными магическим или серебряным оружием. Во первых, требования серебряного оружия являются определяющим. То есть даже волшебный меч не поможет против вервольфа, которого надо бить именно серебряным оружием. Мелочь, но это сделает эти сопротивление иммунитета вервольфа гораздо более значимыми, чем те, которые они являются сейчас, и, соответственно, точно так же атаки заговорами не будут наносить ему полноценного урона, при этом. Вместо полного иммунитета мы будем использовать уменьшение урона, уменьшение порог урона этого будет достаточно большой, допустим 10. Но Добавим, к вервольфу просто быстрое лечение, которое работает до тех пор, пока по нему не попадут серебряным оружием. Что это нам даст? Во-первых замена иммунитета на уменьшение урона позволят всё таки пробивать вервольфа даже в, скажем так не серебряным оружием. С другой стороны, это будет просто меньше урона. С другой стороны, наличие лечения будет как раз хорошо связано с нарративов, когда ты его бьёшь, а на нём эти раны быстро зарастают. Мне это нравится гораздо больше, чем текущий иммунитет, который непонятно, как проявляется.
 
 ### Заключение
 
