--- a/src/content/posts/core-d20/saving-throws-problems.mdx
+++ b/src/content/posts/core-d20/saving-throws-problems.mdx
@@ -17,7 +17,7 @@ tags:
 
 При этом, как правило, характеристика, владение спасброском которой дает класс является важной для этого класса.
 
-Например, Интеллект у волшебников, Телосложение у бойцов, Мудрость у Клериков, Ловкость у плутов.
+Например, Интеллект у волшебников, Телосложение у бойцов, Мудрость у клериков, Ловкость у плутов.
 
 Профильный спасбросок растет за счет повышения и бонуса владения и за счет повышения профильной характеристики.
 
