--- a/src/content/posts/core-d20/spells-1.mdx
+++ b/src/content/posts/core-d20/spells-1.mdx
@@ -65,7 +65,7 @@ tags:
 
 **Длительность:** 1 раунд
 
-Совершите бросок атаки заклинанием в ближнем бою, чтобы коснуться существа и атаковать его жизненную силу холодом могилы. При попадании цель получает 1к8 некротического урона и не может восстановливать хиты до начала вашего следующего хода. Это заклинание не действует на нежить или конструкции.
+Совершите бросок атаки заклинанием в ближнем бою, чтобы коснуться существа и атаковать его жизненную силу холодом могилы. При попадании цель получает 1к8 некротического урона и не может восстанавливать хиты до начала вашего следующего хода. Это заклинание не действует на нежить или конструкции.
 
 Урон от заклинания увеличивается на 1к8, когда вы достигаете уровня заклинателя 5-го (2к8), 11-го (3к8), 17-го (4к8).
 
@@ -163,7 +163,7 @@ tags:
 
 **Длительность:** Мгновенно
 
-Вы выбираете не[магическое письмо, карту, произведение искусства, изображение или сцену в пределах досягаемости, а также чистую книгу, свиток или пергамент в пределах досягаемости. Выбранный текст или изображение переносится на чистую книгу, свиток или пергамент, как если бы он был написан или нарисован мастером-писцом или художником. Одного заклинания достаточно, чтобы расшифровать около 50 страниц текста и изображений.
+Вы выбираете не магическое письмо, карту, произведение искусства, изображение или сцену в пределах досягаемости, а также чистую книгу, свиток или пергамент в пределах досягаемости. Выбранный текст или изображение переносится на чистую книгу, свиток или пергамент, как если бы он был написан или нарисован мастером-писцом или художником. Одного заклинания достаточно, чтобы расшифровать около 50 страниц текста и изображений.
 
 ### Темная дискорпорация
 
