--- a/src/content/posts/core-d20/weapon-groups.mdx
+++ b/src/content/posts/core-d20/weapon-groups.mdx
@@ -41,7 +41,7 @@ tags:
 
 ### Дополнительные оружейные группы
 
-**Монашеское оружие.** копье, длинное копье, короткий меч, короткий лук, серп
+**Монашеское оружие.** Копье, длинное копье, короткий меч, короткий лук, серп
 
 **Оружие друида.** Скимитар, серп, посох, копье, праща, дротик, дубинка.
 
