--- a/src/content/posts/cored20rpg/armor.mdx
+++ b/src/content/posts/cored20rpg/armor.mdx
@@ -103,7 +103,7 @@ author: Антон "Palant" Палихов
 
 \- Многие тяжелые доспехи невозможно носить в течение длительного времени – делая невозможным путешествие в них.
 
-\- Некоторые легкие и средние доспехи можно носить под верхней одеждей.
+\- Некоторые легкие и средние доспехи можно носить под верхней одеждой.
 
 \- Многие доспехи негативно влияют на проверки Скрытности, Акробатики или Атлетики.
 
