--- a/src/content/posts/core-d20/e5e-basic-alchemical-items.mdx
+++ b/src/content/posts/core-d20/e5e-basic-alchemical-items.mdx
@@ -20,7 +20,7 @@ tags:
 
 ---
 
-> В этом разделе представленые наиболее часто встречающиеся предметы, созданные при помощи алхимии.
+> В этом разделе представлены наиболее часто встречающиеся предметы, созданные при помощи алхимии.
 >
 > Важно! Как и в случае с другими категориями, возможно, что некоторые предметы будут описаны сразу в нескольких категориях. Например, тубус для свитков.
 
@@ -112,7 +112,7 @@ By making an Alchemist’s Supplies check, the alchemist can speed the process a
 | Jug                            |          |                         |
 | Flask                          |          |                         |
 | Vial                           |          |                         |
-| Bottle                         |
+| Bottle                         |          |                         |
 
 ## Groups
 
@@ -132,7 +132,7 @@ By making an Alchemist’s Supplies check, the alchemist can speed the process a
 >
 > У части предметов представленных в Книге Игрока уменьшена стоимость и немного изменены свойства.
 >
-> Так кислота и алхимический огонь не считаются импровизированным оружием, а являются метательным простым оружием, которое к тому же наносит площадный урон.
+> Так кислота и алхимический огонь не считаются импровизированным оружием, а являются метательным простым оружием, которое к тому же наносит площадной урон.
 
 ## Goods
 
