--- a/src/content/posts/core-d20/e5e-hexcrawl.mdx
+++ b/src/content/posts/core-d20/e5e-hexcrawl.mdx
@@ -16,7 +16,7 @@ tags:
 
 Определите направление движения. Спросите игроков, в каком направлении они хотят двигаться.
 
-1. Проверка столкновения. Бросьте 1d8. При броске на 1 бросьте по таблице бродячих столкновений. При броске на 8 встречается локация, привязанная к гексу.
+1. Проверка столкновения. Бросьте 1к8. При броске на 1 бросьте по таблице бродячих столкновений. При броске на 8 встречается локация, привязанная к гексу.
 2. Прогресс передвижения по гексу. Персонажи двигаются на 12 миль в смену, или 6 миль по сложному ландшафту.
 
 · Требуется пройти 12 миль, чтобы выйти через 3 дальние стороны гекса.
@@ -25,7 +25,7 @@ tags:
 
 · Смена направления внутри гекса приводит к потере 2 миль пути.
 
-· Если персонажи возвращаются по своим следам, уменьшайте пройденный путь, пока они не покинут гекс. Если они выходят из него любым другим путем, им потребуется пройти для этого дополнительно 1d6-1 миль.
+· Если персонажи возвращаются по своим следам, уменьшайте пройденный путь, пока они не покинут гекс. Если они выходят из него любым другим путем, им потребуется пройти для этого дополнительно 1к6-1 миль.
 
 Выход из гекса. Определите новый гекс (на основании направления движения) и обнулите прогресс.
 
@@ -37,7 +37,7 @@ tags:
 
 · Навигатор определяет направление и темп экспедиции.
 
-2\. Проверка столкновения. Бросьте 1d8. При броске на 8 встречается локация, привязанная к гексу. При броске на 1:
+2\. Проверка столкновения. Бросьте 1к8. При броске на 8 встречается локация, привязанная к гексу. При броске на 1:
 
 · Если в пограничном гексе, проверьте, какую таблицу столкновений необходимо использовать.
 
@@ -65,7 +65,7 @@ tags:
 
 · Смена направления внутри гекса приводит к потере 2 миль пути.
 
-· Если персонажи возвращаются по своим следам, уменьшайте пройденный путь, пока они не покинут гекс. Если они выходят из него любым другим путем, им потребуется пройти для этого дополнительно 1d6-1 миль.
+· Если персонажи возвращаются по своим следам, уменьшайте пройденный путь, пока они не покинут гекс. Если они выходят из него любым другим путем, им потребуется пройти для этого дополнительно 1к6-1 миль.
 
 Выход из гекса:
 
@@ -83,7 +83,7 @@ tags:
 
 · Измените скорость экспедиции на основании ландшафта и условий путешествия.
 
-1. Проверка столкновения. Бросьте 1d8. При броске на 1 бросьте по таблице бродячих столкновений. При броске на 8 встречается локация, привязанная к гексу
+1. Проверка столкновения. Бросьте 1к8. При броске на 1 бросьте по таблице бродячих столкновений. При броске на 8 встречается локация, привязанная к гексу
 2. Действия смены. Разрешите все действия смены.
 3. Потерялись ли они?
 
@@ -93,7 +93,7 @@ tags:
 
 1. Определите действительно пройденное расстояние
 
-· Бросьте 2d6+3 x 10% x Средняя дистанция.
+· Бросьте 2к6+3 x 10% x Средняя дистанция.
 
 · Сделайте проверку Мудрости (Выживание), чтобы проверить, если они верно определили пройденную дистанцию.
 
@@ -107,7 +107,7 @@ tags:
 
 · Смена направления внутри гекса приводит к потере 2 миль пути.
 
-· Если персонажи возвращаются по своим следам, уменьшайте пройденный путь, пока они не покинут гекс. Если они выходят из него любым другим путем, им потребуется пройти для этого дополнительно 1d6-1 миль
+· Если персонажи возвращаются по своим следам, уменьшайте пройденный путь, пока они не покинут гекс. Если они выходят из него любым другим путем, им потребуется пройти для этого дополнительно 1к6-1 миль
 
 ## Выход из гекса:
 
