--- a/src/content/posts/core-d20/feats-2.mdx
+++ b/src/content/posts/core-d20/feats-2.mdx
@@ -8,7 +8,7 @@ tags:
   - D&D 5e
 ---
 
-Ранее мы уже писали про черты: в [Предыдущая статья про черты](/posts/core-d20/feats-1) и а [Черты для школ боевых искусств с использованием боевых приемов и техник](/posts/core-d20/martial-traditions).
+Ранее мы уже писали про черты: [Предыдущая статья про черты](/posts/core-d20/feats-1), а так же [Черты для школ боевых искусств с использованием боевых приемов и техник](/posts/core-d20/martial-traditions).
 
 Это следующая подборка черт.
 
@@ -73,7 +73,7 @@ tags:
 
 Вас трудно измотать и убить. Вы получаете следующие преимущества:
 
-- Увеличение Вашего показателя Телосложени на 1, максимум до 20.
+- Увеличение Вашего показателя Телосложения на 1, максимум до 20.
 - У Вас есть преимущество при спасбросках против эффектов, которые вызывают истощение
 - У Вас есть преимущество при спасбросках от смерти.
 
