Fix tag \«Дневник разработчика»

--- a/src/content/posts/core-d20/enhanced-shields.mdx
+++ b/src/content/posts/core-d20/enhanced-shields.mdx
@@ -5,8 +5,8 @@ date: "2023-05-05"
 tags:
   - Core d20 RPG
   - Снаряжение
-  - Щиты
-  - Дневник разработчика
+  - Щиты  
+  - Дневник разработки
   - Мысли вслух
 ---
 
