Fix Season 2 in AL2

--- a/src/content/posts/forgotten-realms/flan.mdx
+++ b/src/content/posts/forgotten-realms/flan.mdx
@@ -5,7 +5,7 @@ date: "2018-03-13"
 tags:
   - Лига Авантюристов
   - Флан
-  - 1 сезон
+  - Сезон 1
   - Лунное Море
   - "Забытые Королевства"
   - "Forgotten Realms"
@@ -29,7 +29,6 @@ tags:
 
 ---
 
- 
 
 ## Important Locations
 
