--- a/src/content/posts/forgotten-realms/mulmaster.mdx
+++ b/src/content/posts/forgotten-realms/mulmaster.mdx
@@ -4,7 +4,7 @@ description: "Мулмастер. Положение дел."
 date: "2018-03-14"
 tags:
   - "Лига Авантюристов"
-  - "2 сезон"
+  - "Сезон 2"
   - "Лунное море"
   - "Мулмастер"
   - "Забытые Королевства"
