--- a/src/content/posts/core-d20/about-factions-1.mdx
+++ b/src/content/posts/core-d20/about-factions-1.mdx
@@ -4,7 +4,7 @@ description: АВТОРСКАЯ заметка про использование
 date: 2024-05-10
 tags:
   - Организации
-  - Factions
+  - Фракции
   - Faction Agent
   - Renown
   - Мысли вслух
