--- a/src/content/posts/core-d20/e5e-combat-1.mdx
+++ b/src/content/posts/core-d20/e5e-combat-1.mdx
@@ -1,9 +1,9 @@
 ---
-title: "E5E &#8212; Сражение"
+title: "E5E — Сражение"
 date: "2022-05-29"
 description: Наработки правил по сражению
 tags:
-  - "5e"
+  - D&D 5e
   - "combat"
   - "creature"
   - "e5e"
