--- a/src/content/posts/articles/about-craft-magic-items-2.mdx
+++ b/src/content/posts/articles/about-craft-magic-items-2.mdx
@@ -121,7 +121,7 @@ author: Антон "Palant" Палихов
 
 При неудачной проверке вы не сможете узнать его секреты, но будете иметь преимущество при последующих проверках на деконструкцию этого магического предмета, если попытаетесь сделать это снова. Независимо от проверки, магический предмет уничтожается, магия теряется, и предмет становится обычным предметом. Если для изготовления предмета использовались драгоценные камни, металлы или другие подобные материалы, то они остаются у вас, но повреждаются в процессе и сохраняют лишь половину своей первоначальной стоимости.
 
-Например, если для изготовления магического предмета требовался алмаз стоимостью 100 gp, то после его деконструкции стоимость алмаза составит всего 50 gp.
+Например, если для изготовления магического предмета требовался алмаз стоимостью 100 зм, то после его деконструкции стоимость алмаза составит всего 50 зм.
 
 Итак, с основными правилами мы разобрались, теперь пора переходить к блокам магических предметов. Я создам лишь несколько, пообещав (возможно) сделать их все в "Руководстве мастера подземелий" и других источниках, пока не решу внести изменения в систему ремесел и не переделаю ее.
 
@@ -129,7 +129,7 @@ author: Антон "Palant" Палихов
 
 Чудесный предмет, необычный
 
-Стоимость 2 475 gp; или Ингредиенты: очищенный майонез из яиц косули, соленая вода с Плоскости Воды и эльфийское вино из виноградников Авондара.
+Стоимость 2 475 зм; или Ингредиенты: очищенный майонез из яиц косули, соленая вода с Плоскости Воды и эльфийское вино из виноградников Авондара.
 
 Необходимые условия: наличие инструментов повара и умение им пользоваться.
 
@@ -143,7 +143,7 @@ author: Антон "Palant" Палихов
 
 Чудесный предмет, необычный
 
-Стоимость 1 485 gp; или Ингредиенты Пятнадцать листьев, успешно сорванных не более суток назад с дерева, которое не знало о вашем присутствии
+Стоимость 1 485 зм; или Ингредиенты Пятнадцать листьев, успешно сорванных не более суток назад с дерева, которое не знало о вашем присутствии
 
 Необходимые условия: наличие под рукой сапожного инструмента и умение им пользоваться.
 
