--- a/src/content/posts/articles/about-mercenaries-2.mdx
+++ b/src/content/posts/articles/about-mercenaries-2.mdx
@@ -223,10 +223,9 @@ tags:
 
 **Скорость** 30 футов.
 
-СИЛЫ ЛОВ ИНТ МУД ХАР
-
-14 (+2) 14 (+2) 12 (+1) 10 (+0) 11 (+0) 12 (+1)
-
+| СИЛЫ    | ЛОВ     | ТЕЛ     | ИНТ     | МУД     | ХАР     |
+| ------- | ------- | ------- | ------- | ------- | ------- |
+| 14 (+2) | 14 (+2) | 12 (+1) | 10 (+0) | 11 (+0) | 12 (+1) |
 **Навыки** Атлетика +4
 
 **Чувства** пассивные Восприятие 10
