--- a/src/content/posts/articles/about-leadership-in-5e-1.mdx
+++ b/src/content/posts/articles/about-leadership-in-5e-1.mdx
@@ -32,7 +32,7 @@ tags:
 Вторая реперная точка – это получение паладином заклинания Призыв Скакуна, к которому паладин получает доступ на 5ом уровне (бонус владения +3). Как правило, можно ожидать что у паладина 5-6 уровня Харизма будет не менее 16, а значит сверхъестественный компаньон появляется при значении Лидерства не менее 6.
 К этому моменту (Лидерство 6) мы можем представить паладина во главе небольшого отряда – копья 5-10 человек.
 
-При показателе Лидерства 7 – у персонажа уже может появится идейный последователь, оруженосец, верный Санчо. Для таких последователей стоит использовать механики напарников (sidekick) определяя уровень напарника на 4-5 уровеней меньше уровня персонажа.
+При показателе Лидерства 7 – у персонажа уже может появится идейный последователь, оруженосец, верный Санчо. Для таких последователей стоит использовать механики напарников (sidekick) определяя уровень напарника на 4-5 уровней меньше уровня персонажа.
 
 Уточнение. При этом я предполагаю что последователь или верные наемники не находятся постоянно рядом с персонажем, потому что если они вместе с персонажем участвуют в авантюрах и приключениях, то характер их взаимоотношения начинает меняться. Последователь – это в первую очередь персонаж, которому можно доверить сторожить коня, в переметных сумах которого пару килограмм золота.
 
