--- a/src/content/posts/articles/about-leadership-in-5e-2.mdx
+++ b/src/content/posts/articles/about-leadership-in-5e-2.mdx
@@ -29,32 +29,32 @@ Hireling - Наемник - НИПы которые в первую очеред
 
 Пример: Черный Отряд на службе у Душелова.
 
-| оказатель Лидерства | Максимально возможный уровень заклинателя у сторонников | Общее количество костей хитов сторонников |
-| ------------------- | ------------------------------------------------------- | ----------------------------------------- |
-| 1                   | 1                                                       | 3                                         |
-| 2                   | 1                                                       | 4                                         |
-| 3                   | 1                                                       | 5                                         |
-| 4                   | 2                                                       | 6                                         |
-| 5                   | 2                                                       | 7                                         |
-| 6                   | 3                                                       | 8                                         |
-| 7                   | 3                                                       | 10                                        |
-| 8                   | 3                                                       | 15                                        |
-| 9                   | 4                                                       | 20                                        |
-| 10                  | 4                                                       | 25                                        |
-| 11                  | 4                                                       | 30                                        |
-| 12                  | 4                                                       | 40                                        |
-| 13                  | 5                                                       | 50                                        |
-| 14                  | 5                                                       | 60                                        |
-| 15                  | 5                                                       | 80                                        |
-| 16                  | 5                                                       | 90                                        |
-| 17                  | 6                                                       | 100                                       |
-| 18                  | 6                                                       | 125                                       |
-| 19                  | 6                                                       | 150                                       |
-| 20                  | 6                                                       | 200                                       |
-| 21                  | 7                                                       | 250                                       |
-| 22                  | 7                                                       | 300                                       |
-| 23                  | 8                                                       | 350                                       |
-| 24                  | 8                                                       | 400                                       |
+| Показатель Лидерства | Максимально возможный уровень заклинателя у сторонников | Общее количество костей хитов сторонников |
+| -------------------- | ------------------------------------------------------- | ----------------------------------------- |
+| 1                    | 1                                                       | 3                                         |
+| 2                    | 1                                                       | 4                                         |
+| 3                    | 1                                                       | 5                                         |
+| 4                    | 2                                                       | 6                                         |
+| 5                    | 2                                                       | 7                                         |
+| 6                    | 3                                                       | 8                                         |
+| 7                    | 3                                                       | 10                                        |
+| 8                    | 3                                                       | 15                                        |
+| 9                    | 4                                                       | 20                                        |
+| 10                   | 4                                                       | 25                                        |
+| 11                   | 4                                                       | 30                                        |
+| 12                   | 4                                                       | 40                                        |
+| 13                   | 5                                                       | 50                                        |
+| 14                   | 5                                                       | 60                                        |
+| 15                   | 5                                                       | 80                                        |
+| 16                   | 5                                                       | 90                                        |
+| 17                   | 6                                                       | 100                                       |
+| 18                   | 6                                                       | 125                                       |
+| 19                   | 6                                                       | 150                                       |
+| 20                   | 6                                                       | 200                                       |
+| 21                   | 7                                                       | 250                                       |
+| 22                   | 7                                                       | 300                                       |
+| 23                   | 8                                                       | 350                                       |
+| 24                   | 8                                                       | 400                                       |
 
 Таблица весьма и весьма приблизительная, возможно будет еще не раз правиться.
 
